# bit-dmx

./: .gitignore  1  CMakeLists.txt  Cargo.toml  build.rs  fixture def file structure
BitDmx/: FadeCurve.cpp  Selector.cpp  Stage.cpp  Stage.hpp  UIChannel.hpp  UIChaser.cpp  UIChaser.hpp  UIController.hpp  UILabeledElement.cpp  UIPart.cpp  UIPart.hpp  UIPushButton.hpp  UISingleHotkey.cpp  UISingleHotkey.hpp  XYPad.hpp  arduino-serial-dmx.cpp  exampleUI.json
BitDmx.xcodeproj/: project.pbxproj
BitDmx.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
BitDmx.xcodeproj/project.xcworkspace/xcuserdata/noah.xcuserdatad/xcdebugger/: Expressions.xcexplist
BitDmx.xcodeproj/xcuserdata/noah.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
BitDmx.xcodeproj/xcuserdata/noah.xcuserdatad/xcschemes/: CBitDmx.xcscheme  Example Config | CBitDmx.xcscheme  xcschememanagement.plist
CBitDmx/: BitDmx-Info.plist  Button.cpp  Button.hpp  Channel.cpp  Channel.hpp  ChannelGroup.cpp  ChannelGroup.hpp  FadeCurve.cpp  FadeCurve.hpp  Fixture.cpp  Fixture.hpp  Label.cpp  Label.hpp  MusicNightUI.json  Selector.cpp  Selector.hpp  Slider.cpp  Slider.hpp  Stage.cpp  Stage.hpp  Switch.cpp  Switch.hpp  Toggle.cpp  Toggle.hpp  Types.hpp  UIChannel.cpp  UIChannel.hpp  UIChaser.cpp  UIChaser.hpp  UIControlElement.cpp  UIControlElement.hpp  UIController.cpp  UIController.hpp  UIElement.cpp  UIElement.hpp  UIElementActivatable.cpp  UIElementActivatable.hpp  UIElementWrapper.cpp  UIElementWrapper.hpp  UILabeledElement.hpp  (+13 more)
CBitDmx.xcodeproj/: project.pbxproj
CBitDmx.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CBitDmx.xcodeproj/xcuserdata/noah.xcuserdatad/xcschemes/: CBitDmx.xcscheme  xcschememanagement.plist
assets/: chasers.dmx  fixtures.dmx
config/: fixtures_big_example.dmx
config/Feuerzangenbowle/: stage.json  ui.json
config/MusicNight/: chor.json  cup.json  elbkidz.json  end.json  hazer.json  helpers.json  intro.json  madden.json  mark.json  merlin.json  random.json  random_fast.json  rene.json  robin.json  stage.json  ui.json  zarag.json
cserial/: Makefile
interface/: arduino-serial-dmx.c
res/: stage.json  ui.json
src/: Action.cpp  Action.hpp  ActionGroup.cpp  ActionGroup.hpp  Button.cpp  Button.hpp  Channel.cpp  Channel.hpp  Element.cpp  Element.hpp  ElementController.cpp  ElementController.hpp  FadeCurve.hpp  HorizontalSlider.cpp  HorizontalSlider.hpp  Label.cpp  Label.hpp  ResourcePath.hpp  ResourcePath.mm  Slider.cpp  Slider.hpp  Stage.cpp  Stage.hpp  Toggle.cpp  Toggle.hpp  Types.hpp  UIChaser.cpp  UIChaser.hpp  UIControlElement.cpp  UIControlElement.hpp  UIPushButton.cpp  UIPushButton.hpp  UISingleVChannel.cpp  UISingleVChannel.hpp  UISlieder.cpp  UISlieder.hpp  UISwitch.cpp  UISwitch.hpp  UIXYPad.cpp  UIXYPad.hpp  (+11 more)
src/backend/: interface_handler.rs  main.rs
src/fixture_editor/: error.rs  file.rs  main.rs  parser.rs
src/frontend/: colors.rs  frontend_helpers.rs  main.rs  old.main.rs  splash.rs  theme.rs  ui.rs  window.rs
src/frontend/tmp/: chasers.rs  editor.rs  header.rs  widget_ids.rs
src/interface/: arduino-serial-dmx.c  arduino-serial-lib.c  dmx_interface.ino
src/interface/dmx_interface/: dmx_interface.ino
src/structs/: README  channel.rs  channel_group_value.rs  chaser.rs  dmx_parser.rs  fade_curve.rs  fixture.rs  git_hash.rs  helpers.rs  logger.rs  scene.rs  stage.rs  structs.rs  switch.rs  udp_socket.rs  value_collection.rs
src/structs/channel_groups/: moving_2d.rs  rgb.rs  rgba.rs  single.rs
src/structs/compressed_data/: mod.rs
src/structs/fixtures/: mod.rs  rgb.rs  rgba.rs  single.rs
src/test_frontend/: main.rs
structures/: Cargo.toml  build.rs
structures/src/: colors.rs  config.rs  dmx_parser.rs  fixture.rs  frontend_data.rs  helpers.rs  lib.rs  logger.rs  networking.rs  stage.rs  switch.rs  theme.rs  udp_socket.rs  window.rs
structures/src/channel_groups/: moving_2d.rs  rgb.rs  rgba.rs  single.rs
structures/src/io/: config.rs  dmx_parser.rs  logger.rs  mod.rs
structures/src/logic/: channel.rs  channel_group_value.rs  chaser.rs  fade.rs  fixture.rs  mod.rs  stage.rs  switch.rs
structures/src/logic/channel_group/: mod.rs  moving_2d.rs  moving_2d16.rs  moving_3d.rs  rgb.rs  rgba.rs  single.rs
structures/src/logic/channel_groups/: rgba.rs
structures/src/logic/server/: interface_handler.rs  mod.rs  server_handler.rs
structures/src/logic/server/interface/dmx_interface/: dmx_interface.ino
structures/src/res/: mod.rs
structures/src/res/compressed_data/: mod.rs
structures/src/ui/: colors.rs  error_window.rs  frontend_config.rs  frontend_data.rs  mod.rs  theme.rs  ui.rs  window.rs
