[package]
name = "dmx"
version = "0.1.2"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
links = "interface"
build = "build.rs"

[[bin]]
name = "frontend"
path = "src/frontend/main.rs"

[[bin]]
name = "backend"
path = "src/backend/main.rs"

[[bin]]
name = "test_frontend"
path = "src/test_frontend/main.rs"

[lib]
name = "structures"
path = "src/structs/structs.rs"

[features]
default = []

[dependencies]
conrod = "0.35.0"
piston_window = "0.47.0"
find_folder = "0.3.0"
net2 = "0.2.23"
log = "0.3.6"
env_logger = "0.3.3"
meval = { git = "https://github.com/rekka/meval-rs" }
rustc-serialize = "0.3.19"

[build-dependencies]
gcc = "0.3"
