[package]
name = "dmx"
version = "0.1.3"
authors = ["Til Blechschmidt <til@blechschmidt.de>", "Noah Peeters <noah.peeters99@gmail.com>"]
links = "interface"
build = "build.rs"

[[bin]]
name = "frontend"
path = "src/frontend/main.rs"

[[bin]]
name = "backend"
path = "src/backend/main.rs"

[[bin]]
name = "fixture_editor"
path = "src/fixture_editor/main.rs"

[dependencies]
conrod = "0.35.0"  # UI Framework
piston_window = "0.47.0"  # Backend for UI
find_folder = "0.3.0"  # Finding the assets folder
log = "0.3.6"  # Base for custom logger
rustc-serialize = "0.3.19"  # Storing and transmitting of encoded values

[dependencies.structures]
path = "structures"
version = "0.2.0"

[build-dependencies]
gcc = "0.3"  # Compilation of C code for interface communication
